# ChangeLog for dev-ml/sexplib
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ml/sexplib/ChangeLog,v 1.3 2009/10/13 07:05:11 aballier Exp $

*sexplib-4.2.16 (13 Oct 2009)

  13 Oct 2009; Alexis Ballier <aballier@gentoo.org> -sexplib-4.2.15.ebuild,
  +sexplib-4.2.16.ebuild:
  version bump

*sexplib-4.2.15 (26 Sep 2009)

  26 Sep 2009; Alexis Ballier <aballier@gentoo.org> -sexplib-4.2.13.ebuild,
  +sexplib-4.2.15.ebuild:
  version bump

*sexplib-4.2.13 (19 Sep 2009)

  19 Sep 2009; Alexis Ballier <aballier@gentoo.org> +sexplib-4.2.13.ebuild,
  +metadata.xml:
  Initial import, ebuild by Guillaume Horel <guillaume.horel@gmail.com>, bug
  #281274
