@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST sexplib310-4.2.16.tar.gz 64303 RMD160 9628684c0557a67b8fbe0485767bb0f26984338e SHA1 b759e552a8634680236972c8daa52d5fa75bdbaf SHA256 d8c964bc29a2ed1e12da856300f3d6a67664351fafe87f41542e9489106afa30
+DIST sexplib310-4.2.17.tar.gz 64424 RMD160 a1d594ec4dd0746e95140976031b62f6782e0179 SHA1 92b1523f5e96d3b0d376b852dec8797cbd0863cb SHA256 b28c91e1bfed8137940d98638e4c69b7d0f6125eb345c8932472974476757290
 EBUILD sexplib-4.2.16.ebuild 889 RMD160 047bd45e96838ed9b6c7c2f27169faea8f4e2e55 SHA1 0394b36c25b163e43ce01d9c902c01582db1f716 SHA256 25c72c019bedd1ec5493c9ade33ac70d95b4e6d89780a2f034b94d4d5dbc24b8
-MISC ChangeLog 713 RMD160 92b2064121854b2bb754486beac685346c1ba66f SHA1 50de212bbc630e2f762a8799cfd62b117ff67e05 SHA256 650d005795f37faec883a34b000bff3adc5ad95d7cea9e6328d21bc0c76b0a63
+EBUILD sexplib-4.2.17.ebuild 889 RMD160 a45378f69dffc12d3063113cf9382a5fc965f502 SHA1 0fd9ecdaa9a4f50cbe78832f3cbe912051386aaa SHA256 f35c742aa1fdf1efc44b6fe3ab708d7f4fe81f796262aa6d52d5cf3828e6985e
+MISC ChangeLog 836 RMD160 5ca83e9a38768361c64b49c3191999030b813009 SHA1 69ec83c70646e22b9d30b6501749fbefbab4991e SHA256 8b83e2684500e1a26b5e2910002fa58e3e8943c565d5cc5c61c06284318bcb61
 MISC metadata.xml 155 RMD160 dfaa057e679b01302a807c75a32a910098b26809 SHA1 94024f83dcacbb53e92be090dd0f994ec93dc90d SHA256 118048376ebb76f57628b0819f3de4856e73959c2578c88715d37ea2d1e0af81
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.11 (GNU/Linux)
+Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkrUJqwACgkQvFcC4BYPU0opeACfex5bJNm2wE8jpOnheL4fdLIm
-LHQAnRouWud6zVGVm4pDKLI6/YlQhRLT
-=xYj4
+iEYEARECAAYFAktAwT8ACgkQvFcC4BYPU0rrxwCguNKiNJj6DBCGEcP43SCJUu6e
+2S8An2dKsrkZDGTrinQxHuteKGxQwg+d
+=w+7y
 -----END PGP SIGNATURE-----
