@@ -1,6 +1,11 @@
 # ChangeLog for dev-ml/sexplib
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ml/sexplib/ChangeLog,v 1.3 2009/10/13 07:05:11 aballier Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ml/sexplib/ChangeLog,v 1.4 2010/01/03 15:09:12 aballier Exp $
+
+*sexplib-4.2.17 (03 Jan 2010)
+
+  03 Jan 2010; Alexis Ballier <aballier@gentoo.org> +sexplib-4.2.17.ebuild:
+  version bump
 
 *sexplib-4.2.16 (13 Oct 2009)
 
